<resources>
    <string name="app_name">FriendZone</string>
    <string name="emailEditText">Email</string>
    <string name="passwordEditText">Password</string>
    <string name="confirmPasswordEditText">Confirm password</string>
    <string name="nameEditText">Name</string>
    <string name="birthdayTextView">Birthday</string>
    <string name="signInButton">Sign in</string>
    <string name="errorInvalidEmail">This email address is invalid</string>
    <string name="errorInvalidPassword">This password is too short</string>
    <string name="errorIncorrecPassword">This password is incorrect</string>
    <string name="errorFieldRequired">This field is required</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="newsFeedNavigation">Newsfeed</string>
    <string name="createPostNavigation">Create post</string>
    <string name="oursiteNavigation">Our site</string>
    <string name="facebook_app_id" translatable="false">1784677361557369</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb1784677361557369</string>

    <string name="signOutMenu">Sign out</string>
    <string name="postalcodeEditText">Postalcode</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstnameEditText">First name</string>
    <string name="lastnameEditText">Last name</string>
    <string name="signupNameTextView">What is you name?</string>
    <string name="nextButton">Next</string>
    <string name="signupBirthdayTextView">When is your birthday?</string>
    <string name="phoneEditText">Phone</string>
    <string name="signupContactTextView">What is your contact information?</string>
    <string name="firstnameEditTextError">Firstname is required</string>
    <string name="lastnameEditTextError">Lastname is required</string>
    <string name="emailEditTextError">Email is required</string>
    <string name="phoneEditTextError">Phone is wrong format</string>
    <string name="createAccountButton">Create account</string>
    <string name="signupPasswordTextView">Choose a password</string>
    <string name="passwordEditTextError">Password is required</string>
    <string name="confirmPasswordEditTextError">Password confirmation is required</string>
    <string name="passwordDoesNotMatch">Passwords doesn\'t match</string>
    <string name="browseButton">Browse picture</string>
    <string name="findPartnerButton">Find partner</string>
    <string name="FindPartnerDialogTextView">Is %s your partner?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="ageTextView">%d years</string>
    <string name="createPostTextView">Enter a message and create a post</string>
    <string name="createPostButton">Create Post</string>
    <string name="postedTimeText">"Posted at "</string>
    <string name="addressEditText">Address</string>
</resources>
